Updated pages background

--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,12 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/src/css/styles.css" />
     <title>Croissant</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">Croissant</h1>
+      <h1 class="text-center mt-5">Croissant</h1>
       <a class="text-center d-block" href="mailto:croissant@company.com"
         >croissant@company.com</a
       >
