--- a/index.html
+++ b/index.html
@@ -21,27 +21,25 @@
     <title>Croissant</title>
   </head>
   <body>
-    <div class="container">
-      <h1 class="text-center">Croissant</h1>
-      <div class="w-50 description">
-        <p>
-          The croissant began as the Austrian kipfel but became French the
-          moment people began to make it with puffed pastry, which is a French
-          innovation. The secret of an excellent croissant is the quality of the
-          ingredients: sugar, salt, flour, milk, eggs, and of course, butter.
-        </p>
-      </div>
-      <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/photo.html">Photo</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
-        </li>
-      </ul>
+    <h1 class="text-center mt-5">Croissant</h1>
+    <div class="w-50 description">
+      <p>
+        The croissant began as the Austrian kipfel but became French the moment
+        people began to make it with puffed pastry, which is a French
+        innovation. The secret of an excellent croissant is the quality of the
+        ingredients: sugar, salt, flour, milk, eggs, and of course, butter.
+      </p>
     </div>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/photo.html">Photo</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact.html">Contact</a>
+      </li>
+    </ul>
   </body>
 </html>
