--- a/photo.html
+++ b/photo.html
@@ -17,29 +17,28 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/src/css/styles.css" />
     <title>Croissant</title>
   </head>
   <body>
-    <div class="container">
-      <h1 class="text-center">Croissant</h1>
-      <div class="text-center">
-        <img
-          src="/src/images/croissant.jpg"
-          alt="Croissant"
-          class="rounded w-50"
-        />
-        <ul class="nav justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/photo.html">Photo</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
+    <h1 class="text-center mt-5">Croissant</h1>
+    <div class="text-center">
+      <img
+        src="/src/images/croissant.jpg"
+        alt="Croissant"
+        class="rounded w-50"
+      />
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/photo.html">Photo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
