Made website SEO friendly

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact us and get the best croissant in the country - Croissant.ua."
+    />
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -18,23 +22,29 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/css/styles.css" />
-    <title>Croissant</title>
+    <title>Croissant - Croissant.ua</title>
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center mt-5">Croissant</h1>
-      <a class="text-center d-block" href="mailto:croissant@company.com"
-        >croissant@company.com</a
+      <h1 class="text-center mt-5">Contact us</h1>
+      <a class="text-center d-block" href="mailto:croissant@company.ua"
+        >croissant@company.ua</a
       >
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" title="About Croissant" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/photo.html">Photo</a>
+          <a class="nav-link" href="/photo.html" title="Croissant photo"
+            >Photo</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/contact.html"
+          <a
+            class="nav-link"
+            href="/contact.html"
+            aria-current="page"
+            title="Contact Croissant.ua"
             >Contact</a
           >
         </li>
