--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="High-qulity croissant producer company - Croissant.ua."
+    />
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -18,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/css/styles.css" />
-    <title>Croissant</title>
+    <title>Croissant - Croissant.ua</title>
   </head>
   <body>
     <h1 class="text-center mt-5">Croissant</h1>
@@ -32,13 +36,17 @@
     </div>
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/">Home</a>
+        <a class="nav-link" aria-current="page" title="About Croissant" href="/"
+          >Home</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/photo.html">Photo</a>
+        <a class="nav-link" href="/photo.html" title="Croissant photo">Photo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact.html">Contact</a>
+        <a class="nav-link" href="/contact.html" title="Contact Croissant.ua"
+          >Contact</a
+        >
       </li>
     </ul>
   </body>
