--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="See how our croissants look like - Croissant.ua. "
+    />
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -18,10 +22,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/css/styles.css" />
-    <title>Croissant</title>
+    <title>Croissant - Croissant.com</title>
   </head>
   <body>
-    <h1 class="text-center mt-5">Croissant</h1>
+    <h1 class="text-center mt-5">A picture of a croissant</h1>
     <div class="text-center">
       <img
         src="/src/images/croissant.jpg"
@@ -30,13 +34,21 @@
       />
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" title="About Croissant" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/photo.html">Photo</a>
+          <a
+            class="nav-link"
+            href="/photo.html"
+            title="Croissant photo"
+            aria-current="page"
+            >Photo</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/contact.html" title="Contact Croissant.ua"
+            >Contact</a
+          >
         </li>
       </ul>
     </div>
