Increased SEO score

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="High-qulity croissant producer company - Croissant.ua."
+      content="Innovative and high-quality croissant producer company in Ukraine - Croissant.ua."
     />
     <!-- JavaScript Bundle with Popper -->
     <script
@@ -31,7 +31,11 @@
         The croissant began as the Austrian kipfel but became French the moment
         people began to make it with puffed pastry, which is a French
         innovation. The secret of an excellent croissant is the quality of the
-        ingredients: sugar, salt, flour, milk, eggs, and of course, butter.
+        ingredients: sugar, salt, flour, milk, eggs, and of course, butter. The
+        curved croissant (made with margarine) is called a
+        <i>croissant ordinaire</i>
+        and is now less common than the straight one (made with butter). We
+        serve both shapes with different tastes.
       </p>
     </div>
     <ul class="nav justify-content-center">
