--- a/photo.html
+++ b/photo.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/css/styles.css" />
-    <title>Croissant - Croissant.com</title>
+    <title>Try the best croissants - Croissant.com</title>
   </head>
   <body>
     <h1 class="text-center mt-5">A picture of a croissant</h1>
