Updated index.html page title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/src/css/styles.css" />
-    <title>Croissant company - Croissant.ua</title>
+    <title>Croissant company website - Croissant.ua</title>
   </head>
   <body>
     <h1 class="text-center mt-5">Croissant</h1>
