Added missing title attribute on contact.html

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,10 @@
   <body>
     <div class="container">
       <h1 class="text-center mt-5">Contact us</h1>
-      <a class="text-center d-block" href="mailto:croissant@company.ua"
+      <a
+        class="text-center d-block"
+        href="mailto:croissant@company.ua"
+        title="Send us an email"
         >croissant@company.ua</a
       >
       <ul class="nav justify-content-center">
